First pass of multi-index; onto main iteration

--- a/ds/projects/blog/intro_data_indexing/2020-12-21-intro-data-indexing.ipynb
+++ b/ds/projects/blog/intro_data_indexing/2020-12-21-intro-data-indexing.ipynb
@@ -67,8 +67,9 @@
    "source": [
     "---\n",
     "\n",
-    "## Savor Data Reindexing\n",
+    "## Savor Data [Transformation / Reindexing]\n",
     "\n",
+    "- [ ] Replace string IDs with integers\n",
     "- [ ] By Sublocation\n",
     "- Personal Data Dashboard\n",
     "  - [ ] How long does it take me to do ___ (shower, dress, etc) this month this year vs last year?\n",
@@ -151,44 +152,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'id': 'recNVDgKQ75fbhUjv',\n",
-       "  'fields': {'id_num': 20314,\n",
-       "   'project_log': ['reccjFvHkMmxGrsu3'],\n",
-       "   'subloc': ['recrQNJglSZ5mmZQl'],\n",
-       "   'dose': ['rec74Hi1KbAdEHspV', 'recXaoGTBbrRiVeXt'],\n",
-       "   'time_in': '2021-02-18T13:25:00.000Z',\n",
-       "   'mental': ['recm7RWIWmDQDCWSe'],\n",
-       "   'physical': ['recNcdJGnjhCWe6Eu'],\n",
-       "   'name': '20314-Cap-Thi',\n",
-       "   'modified': '2021-03-10T23:15:13.000Z',\n",
-       "   'created': '2021-02-18T03:48:00.000Z',\n",
-       "   'duration': {'specialValue': 'NaN'},\n",
-       "   'project_location': ['recgaBaPGoewkBgbE']},\n",
-       "  'createdTime': '2021-02-18T03:48:00.000Z'},\n",
-       " {'id': 'recSubcryeSu1Iwhd',\n",
-       "  'fields': {'id_num': 20313,\n",
-       "   'project_log': ['reccjFvHkMmxGrsu3'],\n",
-       "   'subloc': ['rec92DKYGuA3gGzXd'],\n",
-       "   'time_in': '2021-02-18T13:21:00.000Z',\n",
-       "   'mental': ['recm7RWIWmDQDCWSe'],\n",
-       "   'physical': ['recQsIaiG012c5KoI'],\n",
-       "   'name': '20313-Tea-Thi',\n",
-       "   'modified': '2021-03-10T23:15:13.000Z',\n",
-       "   'created': '2021-02-18T03:48:00.000Z',\n",
-       "   'duration': {'specialValue': 'NaN'},\n",
-       "   'project_location': ['recgaBaPGoewkBgbE']},\n",
-       "  'createdTime': '2021-02-18T03:48:00.000Z'}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'createdTime': '2021-02-18T03:48:00.000Z',\n",
+      "  'fields': {'created': '2021-02-18T03:48:00.000Z',\n",
+      "             'dose': ['rec74Hi1KbAdEHspV', 'recXaoGTBbrRiVeXt'],\n",
+      "             'duration': {'specialValue': 'NaN'},\n",
+      "             'id_num': 20314,\n",
+      "             'mental': ['recm7RWIWmDQDCWSe'],\n",
+      "             'modified': '2021-04-08T15:31:23.000Z',\n",
+      "             'name': '20314-Cap-Thi',\n",
+      "             'physical': ['recNcdJGnjhCWe6Eu'],\n",
+      "             'project_location': ['recgaBaPGoewkBgbE'],\n",
+      "             'project_log': ['recKbXFuPwJsTufGV'],\n",
+      "             'subloc': ['recrQNJglSZ5mmZQl'],\n",
+      "             'time_in': '2021-02-18T13:25:00.000Z'},\n",
+      "  'id': 'recNVDgKQ75fbhUjv'},\n",
+      " {'createdTime': '2021-02-18T03:48:00.000Z',\n",
+      "  'fields': {'created': '2021-02-18T03:48:00.000Z',\n",
+      "             'duration': {'specialValue': 'NaN'},\n",
+      "             'id_num': 20313,\n",
+      "             'mental': ['recm7RWIWmDQDCWSe'],\n",
+      "             'modified': '2021-04-08T15:31:23.000Z',\n",
+      "             'name': '20313-Tea-Thi',\n",
+      "             'physical': ['recQsIaiG012c5KoI'],\n",
+      "             'project_location': ['recgaBaPGoewkBgbE'],\n",
+      "             'project_log': ['recKbXFuPwJsTufGV'],\n",
+      "             'subloc': ['rec92DKYGuA3gGzXd'],\n",
+      "             'time_in': '2021-02-18T13:21:00.000Z'},\n",
+      "  'id': 'recSubcryeSu1Iwhd'}]\n"
+     ]
     }
    ],
    "source": [
@@ -197,14 +195,21 @@
     "    sort=[\"-time_in\"],\n",
     "    max_records=2\n",
     ")\n",
-    "engages"
+    "pprint(engages)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Primary Keys\n",
+    "One important transformation in this pipeline is to pull out the `fields` of each record onto the same level as the `id`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primary Key Index\n",
     "\n",
     "As likely noticed in these records, any time a related table is referenced, the primary key is used — e.g. `rec92DKYGuA3gGzXd`. Part of the ETL process will therefore be matching up those keys to their respective records. This is not only for me to know what I'm working with; also to get human-readable names for these records to display on the dashboard. Technically I could still do all the reindexing without knowing what the records are, but I would by flying mostly blind and wouldn't be able to get much useful insight.\n",
     "\n",
@@ -223,39 +228,25 @@
    "source": [
     "Here is our first data reindexing task: get the join (dimension) table data into a form that allows quick and easy lookup of the name by the ID.\n",
     "\n",
-    "Again, the data looks like this coming from the Airtable API:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'createdTime': '2019-12-27T21:53:23.000Z',\n",
-      " 'fields': {'engage_log': ['recmhwfUwh1y7fAiL',\n",
-      "                           'recXMOogY77c2F8VC',\n",
-      "                           'rec9olPTOU8HnkM2g',\n",
-      "                           'recdY05auUBWdcIbV',\n",
-      "                           'receMerG3a4Am3Y5s',\n",
-      "                           'recOnBTBUAAtBrKen',\n",
-      "                           'reca9qPGadaJH967Z',\n",
-      "                           'rec5BfWmJlnH2Q4Bq',\n",
-      "                           'recexqQF6f3un4VHa',\n",
-      "                           'recBiJBQsLlAI3GZh',\n",
-      "                           'rec9AjhdUKoD6nOZd',\n",
-      "                           'recWyG2stKkRKLgTb'],\n",
-      "            'name': 'Surf'},\n",
-      " 'id': 'recAS99RkAJBoTCgq'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# pprint(table_data[\"mental\"][10])\n",
-    "pprint(table_data[\"physical\"][10])"
+    "Again, the data looks like this coming from the Airtable API:\n",
+    "\n",
+    "```python\n",
+    "{'createdTime': '2019-12-27T21:53:23.000Z',\n",
+    " 'fields': {'engage_log': ['recmhwfUwh1y7fAiL',\n",
+    "                           'recXMOogY77c2F8VC',\n",
+    "                           'rec9olPTOU8HnkM2g',\n",
+    "                           'recdY05auUBWdcIbV',\n",
+    "                           'receMerG3a4Am3Y5s',\n",
+    "                           'recOnBTBUAAtBrKen',\n",
+    "                           'reca9qPGadaJH967Z',\n",
+    "                           'rec5BfWmJlnH2Q4Bq',\n",
+    "                           'recexqQF6f3un4VHa',\n",
+    "                           'recBiJBQsLlAI3GZh',\n",
+    "                           'rec9AjhdUKoD6nOZd',\n",
+    "                           'recWyG2stKkRKLgTb'],\n",
+    "            'name': 'Surf'},\n",
+    " 'id': 'recAS99RkAJBoTCgq'}\n",
+    "```"
    ]
   },
   {
@@ -295,8 +286,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a basic bit of code to accomplish the above transformation."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,12 +348,12 @@
    "source": [
     "Now the `table_data` dictionary holds the key-name lookup I'll need later on. I won't go through the entire dataset and replace all of the PKs as that would be something of a process. My method will be to match them up only when I actually need the human-readable name.\n",
     "\n",
-    "Having the data in a relational database would be nice for this type of operation: it would be trivial to use SQL JOINs to connect up the tables."
+    "Having the data in a relational database would be nice for this type of operation: it would be trivial to use SQL JOINs to connect up the tables. But nested dictionaries aren't that bad – as a lookup can be done as follows."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +362,7 @@
        "'Surf'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,14 +376,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DataFrame\n",
+    "### Multi-indexed series\n",
     "\n",
-    "Another way that this data could be saved is into a pandas dataframe, with or without a multi-index. The multi-index could be `table`, `id`."
+    "Another way that this data could be saved is into a pandas dataframe or multi-indexed series. The indexes of the series would be `table`, `id`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,31 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['mental', 'rec04WWDmwUYsOfVR', 'Podcast'],\n",
-       " ['mental', 'rec1qtyxPApCENwj3', 'Arrange'],\n",
-       " ['mental', 'rec2ETpho10dvgd3e', 'Troubleshoot'],\n",
-       " ['mental', 'rec47FqiuoEPdjVwc', 'Chat/Text'],\n",
-       " ['mental', 'rec5saWQlgv6Bemi7', 'Shop']]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "table_data_array[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -518,127 +492,126 @@
        "4  mental  rec5saWQlgv6Bemi7          Shop"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Create dataframe from data array\n",
     "table_df = pd.DataFrame(table_data_array, columns=[\"table\", \"id\", \"name\"])\n",
-    "table_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MultiIndex([('mental', 'rec04WWDmwUYsOfVR'),\n",
-       "            ('mental', 'rec1qtyxPApCENwj3'),\n",
-       "            ('mental', 'rec2ETpho10dvgd3e'),\n",
-       "            ('mental', 'rec47FqiuoEPdjVwc'),\n",
-       "            ('mental', 'rec5saWQlgv6Bemi7'),\n",
-       "            ('mental', 'rec7ev4dUkzqyrkKL'),\n",
-       "            ('mental', 'rec8LcP9zB3au4vpv'),\n",
-       "            ('mental', 'rec8PeTbgwugFTZ7w'),\n",
-       "            ('mental', 'rec9Khd7EyWYci3NM'),\n",
-       "            ('mental', 'rec9loXv5Y3rEmpDO'),\n",
-       "            ...\n",
-       "            (   'tag', 'recwj5jPgNK1bEzPs'),\n",
-       "            (   'tag', 'recwwJhncKRJvHqTL'),\n",
-       "            (   'tag', 'recwxnZCInGSQhLkM'),\n",
-       "            (   'tag', 'recx2SFiT8dXgSRCT'),\n",
-       "            (   'tag', 'recx4wgCMw3Y1D2Ix'),\n",
-       "            (   'tag', 'recxCtMwEo38Inzau'),\n",
-       "            (   'tag', 'recxlVXI01cS9fUnm'),\n",
-       "            (   'tag', 'recxubtvp9xRtqY0T'),\n",
-       "            (   'tag', 'recxx4j9FyI99hpll'),\n",
-       "            (   'tag', 'reczTUD5xHG6cDgqN')],\n",
-       "           names=['table', 'id'], length=609)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "multi_index = pd.MultiIndex.from_frame(table_df[[\"table\", \"id\"]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                       Podcast\n",
-       "1                       Arrange\n",
-       "2                  Troubleshoot\n",
-       "3                     Chat/Text\n",
-       "4                          Shop\n",
-       "                 ...           \n",
-       "604                     youtube\n",
-       "605    information_architecture\n",
-       "606                       clean\n",
-       "607                      cardio\n",
-       "608                     finance\n",
-       "Name: name, Length: 609, dtype: object"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "table_df[\"name\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Create multi-index object\n",
+    "multi_index = pd.MultiIndex.from_frame(table_df[[\"table\", \"id\"]])\n",
+    "# Multi-index series\n",
     "table_s = pd.Series(table_df[\"name\"].to_list(), index=multi_index)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is mildly interesting that the indexing for this can be done in exactly the same way as with the nested dictionary. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "table   id               \n",
-       "mental  rec04WWDmwUYsOfVR                     Podcast\n",
-       "        rec1qtyxPApCENwj3                     Arrange\n",
-       "        rec2ETpho10dvgd3e                Troubleshoot\n",
-       "        rec47FqiuoEPdjVwc                   Chat/Text\n",
-       "        rec5saWQlgv6Bemi7                        Shop\n",
-       "                                       ...           \n",
-       "tag     recxCtMwEo38Inzau                     youtube\n",
-       "        recxlVXI01cS9fUnm    information_architecture\n",
-       "        recxubtvp9xRtqY0T                       clean\n",
-       "        recxx4j9FyI99hpll                      cardio\n",
-       "        reczTUD5xHG6cDgqN                     finance\n",
-       "Length: 609, dtype: object"
+       "'Code'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "table_s"
+    "table_s[\"mental\"][\"recVFgOi7povUvYjF\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Though multi-index series are a bit more flexible with how the indexing can be done. From the simple (next cell), to the complex (such as [cross-sections](https://pandas.pydata.org/pandas-docs/stable/user_guide/advanced.html#advanced-xs)). They also allow for some [advanced reindexing](https://pandas.pydata.org/pandas-docs/stable/user_guide/advanced.html#advanced-reindexing-and-alignment)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Code'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_s[\"mental\", \"recVFgOi7povUvYjF\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's nice to be able to easily add and manipulate other Python objects as items within the nested dictionary, such as the list of `engage_log` records that reference the activity.\n",
+    "\n",
+    "- [ ] Try adding / manipulating dictionaries and lists inside a dataframe field\n",
+    "\n",
+    "However, there are many benefits of having the data set up this way.\n",
+    "\n",
+    "One very important one is being able to filter. It is not a trivial action to filter a nested dictionary. In the case of this lookup index, filtering may not necessarily be all that important. But in many other cases, this would make things either much faster and more efficient or simply allow complete new uses of the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Page at a time\n",
+    "\n",
+    "Next, let's iterate through all the `engage_log` data, page by page, transforming it and inserting it into a single DataFrame. Also, saving to a file would be good here to not have to hit the API every single time we restart the environment.\n",
+    "\n",
+    "According to the airtable-python-wrapper docs, the max number of records per page is 100 (which is also the default). That means we'll be iterating through 100 records at a time to fill up the complete frame."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After iterating and transforming (and prior to cleaning/wrangling), the DataFrame will look something like this:\n",
+    "\n",
+    "| id                  | time_in                    | mental                | physical              | tags | subloc                | mental_note | physical_note | moment_log | who | dose                                       | project_location      |\n",
+    "| ------------------- | -------------------------- | --------------------- | --------------------- | ---- | --------------------- | ----------- | ------------- | ---------- | --- | ------------------------------------------ | --------------------- |\n",
+    "| 'recNVDgKQ75fbhUjv' | '2021-02-18T13:25:00.000Z' | ['recm7RWIWmDQDCWSe'] | ['recNcdJGnjhCWe6Eu'] |      | ['recrQNJglSZ5mmZQl'] |             |               |            |     | ['rec74Hi1KbAdEHspV', 'recXaoGTBbrRiVeXt'] | ['recgaBaPGoewkBgbE'] |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterate through 100-record pages, sorted by time_in\n",
+    "for page in engage_log.get_iter(sort=[\"-time_in\"]):\n",
+    "    for record in page:\n",
+    "        "
    ]
   },
   {
