DS Design Manual - probability and stats

--- a/ds/kb/books/data_science_design_manual.ipynb
+++ b/ds/kb/books/data_science_design_manual.ipynb
@@ -66,8 +66,11 @@
    "source": [
     "---\n",
     "\n",
-    "## Chapter 2: Mathematical Preliminaries\n",
-    "\n",
+    "## Chapter 2: Mathematical Preliminaries"
+   ]
+  },
+  {
+   "source": [
     "### 2.1 Probability\n",
     "\n",
     "> Probability theory provides a formal framework for reasoning about the likelihood of events.\n",
@@ -86,15 +89,25 @@
     "- The _expected value_ of a random variable $V$ defined on sample space $S$ is ...\n",
     "  - the probability of the event times its respective value, summed over all events\n",
     "\n",
-    "$E(V) = \\sum p(s) \\cdot V(s)$\n",
-    "\n",
+    "$E(V) = \\sum p(s) \\cdot V(s)$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "#### 2.1.1 Probability vs. Statistics\n",
     "\n",
     "- Probability deals with predicting the likelihood of future events; theoretical math\n",
     "  - Probability theory enables us to find the consequences of a given ideal world\n",
     "- Statistics involves the analysis of the frequency of past events; applied math\n",
-    "  - Statistical theory enables us to measure the extent to which our world is ideal\n",
-    "\n",
+    "  - Statistical theory enables us to measure the extent to which our world is ideal"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "#### 2.1.2 Compound Events and Independence\n",
     "\n",
     "- Intersection\n",
@@ -103,10 +116,16 @@
     "- Union\n",
     "  - The outcomes in which either $A$ or $B$ appear are the union: $A \\cup B$\n",
     "- Events $A$ and $B$ are independent if and only if ${P(A \\cap B) = P(A) \\times P(B)}$\n",
-    "  - prob of intersection of A and B is equal to prob of A times prob of B\n",
-    "\n",
+    "  - prob of intersection of A and B is equal to prob of A times prob of B"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "#### 2.1.3 Conditional Probability\n",
     "\n",
+    "- Interested in the likelihood of event A as a function of some evidence B\n",
     "- The conditional probability of $A$ given $B$, $P(A \\mid B)$ is defined as\n",
     "\n",
     "$P(A \\mid B) = \\frac{P(A \\cap B)}{P(B)}$\n",
@@ -114,34 +133,131 @@
     "Example:\n",
     "\n",
     "- Event $A$ is that at least one of the two dice be an even number\n",
-    "- Event $B$ is the sum of the two dice is either a 7 or 11"
-   ]
-  },
-  {
-   "source": [],
+    "- Event $B$ is the sum of the two dice is either a 7 or 11\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "- $P(A \\mid B) = 1$ because any roll summing to odd must have one even and one odd number.\n",
+    "- $A \\cap B = B$ - intersection b/w A and B is equal to B (A has more outcomes)\n",
+    "- $A \\cap B = \\frac{9}{36}$ and $P(A) = \\frac{25}{36}$\n",
+    "- $P(B \\mid A) = \\frac{9}{25}$\n",
+    "\n",
+    "> Primary tool to compute conditional probabilities is Bayes Theorem:\n",
+    "\n",
+    "$P(B \\mid A) = \\frac{P(A \\mid B)P(B)}{P(A)}$\n",
+    "\n",
+    "Using Bayes Theorem:\n",
+    "\n",
+    "$P(B \\mid A) = \\frac{1 \\cdot 9/36}{25/36} = 9/25$\n",
+    "\n",
+    "(same result as above.)"
+   ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 2.1.4 Probability Distributions\n",
+    "\n",
+    "- Random variables are numerical functions with values associated with probabilities of occurrence\n",
+    "- Random variables can be represented by their _probability density function_, or pdf\n",
+    "  - x-axis is range of values the variable can take on\n",
+    "  - y-axis shows probability of that value\n",
+    "- pdf plots are related to histograms of data frequency\n",
+    "  - in this case, y-axis is the observed frequency of each value of x\n",
+    "- histogram -> pdf: divide each bucket by the total frequency over all buckets\n",
+    "  - the sum of the entries becomes 1, and we have a probability distribution\n",
+    "- Random variables can also be visualized with a _cumulative density function_, or cdf\n",
+    "  - the running sum of probabilities in the pdf\n",
+    "  - reflects the probability that a value x is above the line\n",
+    "- pdf and cdf contain the same information"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 2.2 Descriptive Statistics\n",
+    "\n",
+    "- Provide methods of capturing properties of a dataset or sample\n",
+    "  - aggregation as data reduction\n",
+    "- Two main types\n",
+    "  - Central tendency measures\n",
+    "  - Variability measures"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 2.2.1 Centrality Measures\n",
+    "\n",
+    "- Mean (arithmetic): sum the values and divide by the number of observations\n",
+    "  - Good for characterizing symmetric distributions without outliers\n",
+    "- Geometric mean: the nth root of the product of n values (multiply all values, then take the nth root)\n",
+    "  - Always less than or equal to the arithmetic mean\n",
+    "  - Very sensitive to values near zero (a single 0 destroys all meaning - like an outlier of infinity in arithmetic)\n",
+    "  - Good for averaging ratios\n",
+    "- Median: exact middle of a sorted array of values\n",
+    "  - Must be an actual observation (unless taking the arithmetic mean of middle two values)\n",
+    "  - Generally better for skewed distributions or data with outliers\n",
+    "- Mode: most frequent element in the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2.2.2 Variability Measures\n",
+    "\n",
+    "- Standard deviation is the most common\n",
+    "  - Sum of squares differences between individual elements and the mean\n",
+    "  - variance is stdev squared (i.e. they measure the same thing)\n",
+    "    - variance is very sensitive to outliers\n",
+    "- Population vs sample: divide by $n$ or $n - 1$?\n",
+    "  - Full population: $n$\n",
+    "  - Sample: $n - 1$\n",
+    "  - Example:\n",
+    "    - Sampling one point doesn't say anyhting about underlying variance of any population\n",
+    "    - But it makes sense to say there is zero variance in X among the population of a one-person island\n",
+    "  - For reasonable-sized datasets, they are going to be about the same, so it doesn't really matter"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2.2.3 Interpreting Variance\n",
+    "\n",
+    "- _Sampling errors_ happen when observations capture unrepresentative circumstances\n",
+    "- _Measurement errors_ represent the limits of precision inherent in any sensing device\n",
+    "- _Signal to noise ratio_: how much the observations measure the actual quantity rather than the data variance\n",
+    "- Example: weighing yourself in the morning\n",
+    "  - when you last ate = sampling error\n",
+    "  - quality / age of the scale = measurement error\n",
+    "  - changes in body mass = actual variation\n",
+    "- Distressingly (for data scientists), much of what happens in the world is random fluctuations or arbitrary coincidence"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 2.2.4 Characterizing Distributions\n",
+    "\n",
+    "- Central tendencies by themselves don't do much to descibe distributions\n",
+    "- Combined with measures of variability, a decent job can be done describing any distribution\n",
+    "- Best to always report both when characterizing a distribution"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 2.3 Correlation Analysis"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
