--- a/ds/kb/books/grokking_deep_learning.ipynb
+++ b/ds/kb/books/grokking_deep_learning.ipynb
@@ -899,8 +899,149 @@
     "### Chapter 4: Review and solifidy\n",
     "\n",
     "\n",
-    "* [ ] Build the code for the above neural network implementation from scratch, without looking at notes\n",
-    "  * Leave comments ELI5 every single line"
+    "- [x] Build the code for the above neural network implementation from scratch, without looking at notes\n",
+    "  - Leave comments ELI5 every single line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: 2.0; error: 0.0899999999999999\n",
+      "Prediction: 2.4799999999999995; error: 0.0323999999999999\n",
+      "Prediction: 2.192; error: 0.011663999999999924\n",
+      "Prediction: 2.3648; error: 0.004199039999999996\n",
+      "Prediction: 2.26112; error: 0.0015116543999999848\n",
+      "Prediction: 2.3233279999999996; error: 0.0005441955839999903\n",
+      "Prediction: 2.2860032; error: 0.00019591041023999157\n",
+      "Prediction: 2.3083980799999995; error: 7.052774768639398e-05\n",
+      "Prediction: 2.294961152; error: 2.5389989167102727e-05\n",
+      "Prediction: 2.3030233088; error: 9.140396100157518e-06\n",
+      "Prediction: 2.2981860147199997; error: 3.290542596057029e-06\n",
+      "Prediction: 2.301088391168; error: 1.184595334580337e-06\n",
+      "Prediction: 2.2993469652992; error: 4.2645432044868935e-07\n",
+      "Prediction: 2.30039182082048; error: 1.5352355536166736e-07\n",
+      "Prediction: 2.299764907507712; error: 5.526847993020025e-08\n",
+      "Prediction: 2.3001410554953727; error: 1.9896652774897148e-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic single-neuron network, from memory\n",
+    "\n",
+    "def network(input, weight):\n",
+    "    pred = input * weight\n",
+    "    return pred\n",
+    "\n",
+    "input, weight, output, alpha = 4, 0.5, 2.3, 0.1\n",
+    "\n",
+    "for iteration in range(16):\n",
+    "    # Get the prediction from the network\n",
+    "    pred = network(input, weight)\n",
+    "    # Calculate error - this uses mean squared error\n",
+    "    error = (pred - output) ** 2\n",
+    "    # Calculate delta (pure error)\n",
+    "    delta = pred - output\n",
+    "    # Calculate the weight delta / derivative\n",
+    "    # how much the weight should be updated and in what direction\n",
+    "    derivative = input * delta\n",
+    "    # Calculate new weight\n",
+    "    weight = weight - (alpha * derivative)\n",
+    "    print(f\"Prediction: {pred}; error: {error}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truth: 42.1; Prediction: 0.6000000000000001; error: 1722.25\n",
+      "Truth: 42.1; Prediction: 37.95; error: 17.22249999999999\n",
+      "Truth: 42.1; Prediction: 41.685; error: 0.1722249999999993\n",
+      "Truth: 42.1; Prediction: 42.058499999999995; error: 0.0017222500000005237\n",
+      "Truth: 42.1; Prediction: 42.09585; error: 1.722250000002293e-05\n",
+      "Truth: 42.1; Prediction: 42.099585000000005; error: 1.7222499999728054e-07\n",
+      "Truth: 42.1; Prediction: 42.0999585; error: 1.7222500001497306e-09\n",
+      "Truth: 42.1; Prediction: 42.09999585; error: 1.722250001918982e-11\n",
+      "Truth: 42.1; Prediction: 42.099999585; error: 1.7222500196114962e-13\n",
+      "Truth: 42.1; Prediction: 42.0999999585; error: 1.722250137561593e-15\n",
+      "Truth: 42.1; Prediction: 42.09999999585; error: 1.7222524965643777e-17\n",
+      "Truth: 42.1; Prediction: 42.099999999585; error: 1.722246599060445e-19\n",
+      "Truth: 42.1; Prediction: 42.0999999999585; error: 1.722482507093736e-21\n",
+      "Truth: 42.1; Prediction: 42.09999999999585; error: 1.7218927673027674e-23\n",
+      "Truth: 42.1; Prediction: 42.09999999999959; error: 1.6983859745046296e-25\n",
+      "Truth: 42.1; Prediction: 42.099999999999966; error: 1.2621774483536189e-27\n"
+     ]
+    }
+   ],
+   "source": [
+    "input, weight, truth, alpha = 3, 0.2, 42.1, 0.1\n",
+    "\n",
+    "for iteration in range(16):\n",
+    "    # Make prediction by multiplying the input by the neuron's weight\n",
+    "    pred = input * weight\n",
+    "    # Calculate error (using mean squared error)\n",
+    "    error = (pred - truth) ** 2\n",
+    "    # Calcualte derivative: direction and amount weight should change to reduce error\n",
+    "    derivative = input * (pred - truth)\n",
+    "    # Use derivative and alpha to update the neuron's weight\n",
+    "    weight = weight - (alpha * derivative)\n",
+    "    print(f\"Truth: {truth}; Prediction: {pred}; error: {error}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pred: 6.400000; error: 104.244100\n",
+      "Pred: 12.934400; error: 13.510035\n",
+      "Pred: 15.286784; error: 1.750901\n",
+      "Pred: 16.133642; error: 0.226917\n",
+      "Pred: 16.438511; error: 0.029408\n",
+      "Pred: 16.548264; error: 0.003811\n",
+      "Pred: 16.587775; error: 0.000494\n",
+      "Pred: 16.601999; error: 0.000064\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Attempt #3 - got it first try!\n",
+    "input, weight, output, alpha = 8, 0.8, 16.61, 0.01\n",
+    "\n",
+    "for i in range(8):\n",
+    "    pred = input * weight  # Make prediction\n",
+    "    error = (pred - output) ** 2  # Calculate error\n",
+    "    derivative = input * (pred - output)  # Calculate derivative\n",
+    "    weight = weight - (derivative * alpha)  # Calculate new weight\n",
+    "    print(f\"Pred: {pred:,f}; error: {error:,f}\")"
    ]
   },
   {
